--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
 
-    <title>test</title>
+    <title>Pokedex</title>
+    <h1>Pokedex</h1>
     <link
       rel="stylesheet"
       type="text/css" />
@@ -11,6 +12,6 @@
   </head>
 
   <body>
-    Ma page de test
+
   </body>
 </html>
