--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html>
   <head>
     <meta charset="utf-8" />
-
-    <title>Pokedex</title>
-    <link
+      <link
       rel="stylesheet"
       type="text/css" />
     <link rel="stylesheet" href="style.css" />
+
+    <title>Pokemon Finder</title>
   </head>
 <h1>Pokedex</h1>
+  <body>
+    <div class="imageCenter>
+      <img class="background" url="https://images8.alphacoders.com/548/548142.jpg"
+      <div/>
+  </body> 
 </html>
