--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <title>Pokemon Finder</title>
   </head>
-<h1>Pokedex</h1>
+<h1 class="title">Pokedex</h1>
   <body>
     <div class="imageCenter>
       <img class="background" url="https://images8.alphacoders.com/548/548142.jpg"
