--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
       <link
       rel="stylesheet"
-      type="text/css" />
-    <link rel="stylesheet" href="style.css" />
+      type="text/css"
+      href="style.css"/>
 
     <title>Pokemon Finder</title>
   </head>
