--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <link
       rel="stylesheet"
       type="text/css"
-      href="style.css"/>
+      href="style.css">
 
     <title>Pokemon Finder</title>
   </head>
