--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <link
       rel="stylesheet"
       type="text/css"
-      href="style.css">
+      href="https://adriendev15.github.io/pokemon/style.css">
 
     <title>Pokemon Finder</title>
   </head>
