--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <h1 class="title">Pokedex</h1>
   <body>
     <div class="imageCenter>
-<!--       <img class="background" url="https://images8.alphacoders.com/548/548142.jpg" -->
+<!-- img class="background" url="https://images8.alphacoders.com/548/548142.jpg" -->
       <img src="https://adriendev15.github.io/pokemon/ninja.jpg"/>
       <div/>
   </body> 
