--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="https://adriendev15.github.io/pokemon/style.css">
-    <script src="https://adriendev15.github.io/pokemon/script.js"></script>
+    <script type="text/javascript" src="https://adriendev15.github.io/pokemon/script.js"></script>
     <title>Pokemon Finder</title>
   </head>
   
