--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
       <button type="button" onclick="displayPokemon()">
         afficher pikachu
       </button>
+    <div>
+      <img id="pokemonPicture"/>
+    </div>
+    <div>
+      <img id="pokemonPictureShiny"/>
+    </div> 
     </div>
   </body> 
 </html>
